--- a/main.css
+++ b/main.css
@@ -134,6 +134,13 @@ img {
         margin-bottom: 40px;
     }
     
+    .hero {
+        font-size: 2em !important;
+    }
+    
+    #face {
+        width: 100%;
+    }
     
 }
 
@@ -181,8 +188,12 @@ img {
     margin: auto;
 }
 
-.p-zero {
+.no-margin {
     margin: 0px;
+}
+
+.no-padding {
+    padding: 0px;
 }
 
 
@@ -228,8 +239,6 @@ img {
     font-style: normal;
     font-weight: 600;
     font-size: 3em; /*48px*/
-    line-height: box-height; /*64px*/
-    
     color: #000000;
 }
 
@@ -248,26 +257,12 @@ img {
 }
 
 
-/*
-.index {
-    border-bottom: solid 4px #EB5757;
-    margin-right: 16px;
-    color: #000000;
-    
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 2.5em;
-    line-height: 2em;
-}
-*/
 
-/* 
 .caption {
-    font-size: 14px;
+    font-size: 0.75em;
     font-weight: 400;
 }
-*/
+
 
 
 .h1 {
@@ -353,52 +348,3 @@ img {
     margin: 0px 0px 4px 0px;
     color: #000000;
 }
-
-
-
-/*
-#side {
-    position: fixed;
-    float: left;
-    width: 180px; 
-    height: 100%;
-    display: block;
-}
-
-#header{    
-    text-align: center;
-    font-family: "Pacifico", cursive;
-    font-size: 28px;
-    padding-top: 20px;
-}
-
-#nav{
-    text-align: center;
-    padding-top: 20px;
-}
-
-.topnav{
-    margin-left: 0px;
-    padding-left: 30px;
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    font-size: .75em;
-    letter-spacing: .5px;
-    
-}
-
-
-#contents {
-    position: absolute;
-    float: left;
-    display: block;
-    width: auto;
-    margin-left: 180px;
-    margin-right: 15%;
-    padding-top: 90px;
-    font-family: "Lato", sans-serif;
-    z-index: -1;
-    justify-content: center;
-    
-}
-*/
