mobile responsive update
padding size reduced on mobile.

--- a/main.css
+++ b/main.css
@@ -103,6 +103,10 @@ img {
 
 /* Only mobile */
 @media screen and (max-width: 720px) {
+    .window {
+        margin-left: 16px;
+        margin-right: 16px;
+    }
     
     .col8-width {
         width: 100%;
@@ -139,7 +143,17 @@ img {
     }
     
     #face {
+        width: 40% !important;
+    }
+    
+    #menu {
+        margin-left: 16px;
+        margin-right: 16px;
         width: 100%;
+    }
+    
+    .menu-list {
+    padding-right: 24px !important;
     }
     
 }
@@ -183,7 +197,7 @@ img {
 }
 
 #face {
-    width: 20%; 
+    width: 25%; 
     align-content: center;
     margin: auto;
 }
