--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ html {
 #footer {
     width: calc(100% - 96px);
     margin: 40px 48px 40px 48px;
-    border-top: solid 1px #000000;
+    border-top: solid 1px #2b2b2b;
 }
 
 
@@ -32,7 +32,7 @@ body {
 
 a {
     text-decoration: none;
-    color: #000000;  
+    color: #2b2b2b;  
 }
 
 
@@ -193,7 +193,7 @@ img {
 
     letter-spacing: 0.25px;
 
-    color: #000000;
+    color: #2b2b2b;
 }
 
 
@@ -218,8 +218,10 @@ img {
 
 
 .project-item-index {
-    border-bottom: solid 2px #EB5757;
+    border-bottom: solid 3px #EB5757;
     margin-right: 8px;
+    padding-bottom: 16px;
+    margin-bottom: 24px !important;
 }
 
 
@@ -259,14 +261,14 @@ img {
     font-style: normal;
     font-weight: 600;
     font-size: 3em; /*48px*/
-    color: #000000;
+    color: #2b2b2b;
 }
 
 .index {
     border-bottom: solid 4px #EB5757;
     margin-right: 16px;
     margin-bottom: 24px;
-    color: #000000;
+    color: #2b2b2b;
     
     display: inline-flex;
     font-family: Montserrat, sans-serif;
@@ -279,7 +281,7 @@ img {
 
 
 .caption {
-    font-size: 0.75em;
+    font-size: 0.75em !important;
     font-weight: 400;
 }
 
@@ -292,7 +294,7 @@ img {
     font-size: 1.5em;
     line-height: 2em;
     
-    color: #000000;
+    color: #2b2b2b;
 }
 
 
@@ -305,7 +307,7 @@ img {
     /* identical to box height, or 120% */
 
     letter-spacing: 0.15px;
-    color: #000000;
+    color: #2b2b2b;
 }
 
 
@@ -318,7 +320,7 @@ img {
     /* identical to box height, or 120% */
 
     letter-spacing: 0.15px;
-    color: #000000;
+    color: #2b2b2b;
 }
 
 .regular {
@@ -348,23 +350,44 @@ img {
     letter-spacing: 0.25px;
 
     /* Red */
-    color: #000000;
+    color: #2b2b2b;
     /*column-count: 1;*/
 }
 
 /* Contribution items */
 
+
 .chip {
-    border: 1px solid #000000;
+    /*border: 1px solid #2b2b2b;*/
     /*box-sizing: border-box;*/
-    border-radius: 4px;
-    padding: 4px;
+    background-color: #f9f5ff;
+    padding: 8px;
     display: inline-block;
     font-family: Montserrat, sans-serif;
+    
+    color: #a074ff !important;
     font-style: normal;
     font-weight: 400;
     font-size: 0.875em;
     letter-spacing: 0.15px;
     margin: 0px 0px 4px 0px;
-    color: #000000;
+    color: #2b2b2b;
+}
+
+.appstore {
+    /*border: 1px solid #2b2b2b;*/
+    /*box-sizing: border-box;*/
+    border-radius: 4px;
+    background-color: #000000;
+    padding: 8px;
+    display: inline-block;
+    font-family: Montserrat, sans-serif;
+    
+    color: #ffffff !important;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 0.875em;
+    letter-spacing: 0.15px;
+    margin: 0px 0px 4px 0px;
+    color: #2b2b2b;
 }
