--- a/main.css
+++ b/main.css
@@ -282,7 +282,10 @@ img {
 
 .caption {
     font-size: 0.75em !important;
+    font-family: Montserrat, sans-serif;
     font-weight: 400;
+    margin-top: 0px;
+    padding-top: 0px;
 }
 
 .align-center {
@@ -290,7 +293,7 @@ img {
 }
 
 .regular {
-    font-weight: 300 !important;
+    font-weight: 400 !important;
 }
 
 .italic {
