--- a/main.css
+++ b/main.css
@@ -281,10 +281,13 @@ img {
 
 
 .caption {
-    font-size: 0.75em !important;
+    font-size: .85em !important;
     font-family: Montserrat, sans-serif;
     font-weight: 400;
-    margin-top: 0px;
+    letter-spacing: 0.25px;
+    line-height: 1.5em;
+    margin-top: -64px;
+    margin-bottom: 80px;
     padding-top: 0px;
 }
 
