--- a/main.css
+++ b/main.css
@@ -5,9 +5,11 @@ html {
 #menu {
     position: fixed;
     top: 0px;
+    left: -48px;
     background-color: white;   
     width: calc(100% - 96px);
-    margin: 0px 48px 40px 48px; 
+    margin: 0px 48px 40px 48px;
+    padding: 0px 48px 0px 48px;
 }
 
 #footer {
@@ -40,6 +42,11 @@ img {
     width: 100%;
     margin-bottom: 80px;
 }
+
+.shadow {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
 
 .window {
     display: block;
@@ -195,7 +202,6 @@ img {
 
     color: #2b2b2b;
 }
-
 
 .logo {
     width: 24px;
