3-column layout added

--- a/main.css
+++ b/main.css
@@ -26,6 +26,14 @@ body {
     margin: auto 0;
     display: block;
     background-color: #FFFDF4;
+
+    font-family: Sora, sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 1em;
+    line-height: 1.5em;
+    letter-spacing: 0.25px;
+    color: #2b2b2b;
 }
 
 a {
@@ -34,8 +42,8 @@ a {
 }
 
 img {
-    width: 100%;
-    margin-bottom: 80px;
+    max-width: 100%;
+    /*margin-bottom: 80px;*/
 }
 
 img.no-margin {
@@ -90,14 +98,11 @@ img.round-corner{
 
 .project-container {
     width: 100%;
-    /*width: calc(66.7% - 3px);*/
-    /*background-color: skyblue;*/
     display:inline;
 }
 
 
 .project-box {
-/*background-color:Chartreuse;*/
    width:32%;
    display: flex;
    margin:8px 8px 0;
@@ -107,6 +112,53 @@ img.round-corner{
 .project-description {
     flex: 2;
 }
+
+.circle {
+        border-radius: 50%;
+        width: 32px;
+        height: 32px;
+        padding: 2px;
+        /*background: #212121;*/
+        border: 1px solid #212121;
+        /*text-align: center;*/
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+/* 3-column container */
+/* container */
+.padded-boxes {
+    display:flex;
+    flex-wrap:wrap;
+    gap:2rem;
+    margin-top: 4rem;
+}
+
+/* boxes */
+.padded-boxes > * {
+    width:100%;
+    /*background:#eee;*/
+}
+
+/* headings */
+.padded-boxes .heading {
+    /*background:#f97171;*/
+    /*margin:0;*/
+    margin-bottom: 2rem;
+    /*border-top-left-radius:.4rem;*/
+    /*border-top-right-radius:.4rem;*/
+}
+
+
+/* tablet breakpoint */
+@media (min-width:768px) {
+    .padded-boxes > * {
+        width:calc((100% - 4rem) / 3);
+    }
+}
+
 
 .button-secondary {
     width:fit-content;
@@ -149,7 +201,7 @@ img.round-corner{
 }
 
 /* Only mobile */
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 768px) {
     .window {
         margin-left: 16px;
         margin-right: 16px;
@@ -249,7 +301,7 @@ img.round-corner{
 }
 
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 768px) {
     .menu-ul {
         margin-left: 0px !important;
         margin-right: 0px !important;
@@ -268,7 +320,7 @@ img.round-corner{
 }
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 768px) {
   .menu-ul.responsive {
       position: relative;
       margin: 0px !important;
@@ -350,6 +402,10 @@ img.round-corner{
     margin: auto;
 }
 
+.center-content {
+    justify-content: center;
+}
+
 
 .index {
     border-bottom: solid 4px #EB5757;
@@ -367,14 +423,16 @@ img.round-corner{
 
 
 .caption {
-    font-size: .85em !important;
+    font-size: .85em;
     font-family: Sora, sans-serif;
-    font-weight: 400;
+    font-weight: 300;
     letter-spacing: 0.25px;
     line-height: 1.5em;
-    margin-top: -64px;
-    margin-bottom: 80px;
-    padding-top: 0px;
+    color: #909090;
+    /*margin-top: -64px;*/
+    /*margin-bottom: 80px;*/
+    /*padding-top: 0px;*/
+    text-align: center;
 }
 
 .align-center {
@@ -422,7 +480,7 @@ img.round-corner{
 }
 
 
-.h3 {
+h3 {
     font-family: Sora, sans-serif;
     font-style: normal;
     font-weight: 600;
