--- a/pwpage.css
+++ b/pwpage.css
@@ -8,7 +8,7 @@ html {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     font-weight: 300;
     font-size: 16px;
-    background: #f2f2f2;
+    background: #FFFDF4;
     color: #2D3737;
     display: flex;
     align-items: center;
@@ -22,8 +22,14 @@ html {
     box-shadow: 0 2px 3px 0 rgba(0,0,0,0.1);
     border-radius: 3px;
     min-width: 500px;
-
 }
+
+@media screen and (max-width: 800px) {
+    .protected {
+        min-width: 300px;
+    }
+}
+
 .protected__content {
     padding: 24px 28px;
 }
