--- a/main.css
+++ b/main.css
@@ -62,7 +62,7 @@ img.round-corner{
 
 video {
     border-radius: 24px;
-    object-fit: fill;
+    object-fit: scale-down;
 }
 
 .window {
@@ -125,18 +125,18 @@ video {
 }
 
 .circle {
-        border-radius: 50%;
-        width: 32px;
-        height: 32px;
-        padding: 2px;
-        /*background: #212121;*/
-        border: 1px solid #212121;
-        /*text-align: center;*/
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    padding: 2px;
+    /*background: #212121;*/
+    border: 1px solid #212121;
+    /*text-align: center;*/
 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 /* 3-column container */
 /* container */
