Retry vertical align poppy image in About

--- a/main.css
+++ b/main.css
@@ -58,6 +58,10 @@ img.round-corner{
     border-radius:24px;
 }
 
+img.vertical-align {
+    vertical-align: middle;
+}
+
 .video-mask {
     overflow: hidden;
     max-width: 720px;
